# cutout

./: .gitignore  LICENSE  README.md  cardboard_cutout.gd.uid  cardboard_cutout_old.gd.uid  contour_test_2d.gd.uid  contour_test_2dbckup.gd.uid  contour_utils.gd.uid  export_plugin.sh  icon.svg.import  papier-textur-hintergrund-karton.jpg.import  project.godot  siobhan.png.import  siobhan_cutout.tres  test_library.gd.uid  test_scene.tscn  test_triangulation.gd.uid
addons/cutout/cutout-gdext/: Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  build.ps1  build.sh  copy_lib.ps1  copy_lib.sh
addons/cutout/cutout-gdext/src/: lib.rs
addons/cutout/cutout-gdext/src/common/: mod.rs
addons/cutout/cutout-gdext/src/contour/: algorithm.rs  grid.rs  marching_squares.rs  mod.rs  moore_neighbour.rs  processor.rs  settings.rs
addons/cutout/cutout-gdext/src/fracture/: clipper_utils.rs  geometry.rs  mod.rs  processor.rs  seeds.rs  slice.rs  voronoi.rs
addons/cutout/cutout-gdext/src/simplify/: mod.rs  rdp.rs  visvalingam_whyatt.rs
tests/: contour_visualizer.gd  destruction_visualizer.gd  example_cutout_mesh_usage.gd.uid  image_polygon_visualizer.gd  image_polygon_visualizer.gd.uid  test_contour_visualization.tscn  test_cutout_contour_data.gd  test_cutout_contour_marching_squares.gd  test_cutout_contour_marching_squares.gd.uid  test_cutout_contour_moore_neighbour.gd  test_cutout_contour_moore_neighbour.gd.uid  test_cutout_mesh_instance3d_actually.tscn  test_cutout_mesh_instance_3d.tscn  test_cutout_mesh_instance_3d_generator_debug.gd  test_cutout_mesh_sharing.gd  test_slice.gd  (+7 more)
(+125 files in other folders)
