# Cutout GDExtension - Rust backend for contour detection, simplification, and fracture
#
# Build instructions:
#   Release: .\build.ps1 release (or just .\build.ps1)
#   Debug:   .\build.ps1 debug
#
# This will compile and copy the library to addons/cutout/bin/ with the correct name

[package]
name = "cutout-gdext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
rayon = "1.8"
delaunator = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
